[package]
name = "srv"
version = "0.1.0"
authors = ["David Ross <daboross@daboross.net>"]
edition = "2018"

[dependencies]
bytes = "0.5"
chrono = "0.4"
derive_more = "0.15"
debug_stub_derive = "0.3"
err-ctx = "0.2"
fern = "0.6"
hyper = "0.13"
hyper-tls = "0.4"
log = "0.4"
ndarray = "0.13"
serde_json = "1"
smart-default = "0.6"
string_morph = "0.1.0"
structopt = "0.3"
textwrap = "0.12"
websocket = "0.24"

[dependencies.cursive]
version = "0.15"
default-features = false
features = ["crossterm-backend"]

[dependencies.futures]
version = "0.3"
features = ["compat"]

[dependencies.old_futures]
package = "futures"
version = "0.1"

[dependencies.tokio]
version = "0.2"
features = ["rt-util"]

[dependencies.log-panics]
version = "2"
features = ["with-backtrace"]

[dependencies.screeps-api]
#version = "0.6"
git = "https://github.com/daboross/rust-screeps-api.git"
rev = "294d76aaecdb63280d8193ae1d657df1de0ff7a9"
